[gd_scene load_steps=4 format=3 uid="uid://bh1ssyb5qltnk"]

[ext_resource type="Script" path="res://ui/adventurer_popup.gd" id="1_popup"]
[ext_resource type="Texture2D" uid="uid://clia71e760qmr" path="res://assets/simple-old-paper-1.jpg" id="3_ntd3w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2aym"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.318581, 0.200606, 0.0823663, 1)

[node name="AdventurerPopup" type="PanelContainer"]
z_index = 4096
z_as_relative = false
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_r2aym")
script = ExtResource("1_popup")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_ntd3w")
expand_mode = 1
flip_v = true

[node name="VBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme_override_constants/separation = 4

[node name="Top" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Title" type="Label" parent="VBox/Top"]
layout_mode = 2
size_flags_horizontal = 3
text = "Adventurer"

[node name="Close" type="Button" parent="VBox/Top"]
visible = false
layout_mode = 2
text = "X"

[node name="Body" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Line1" type="Label" parent="VBox/Body"]
layout_mode = 2

[node name="Line2" type="RichTextLabel" parent="VBox/Body"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Line3" type="Label" parent="VBox/Body"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/Body"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/Body/VBoxContainer"]
layout_mode = 2

[node name="Party" type="Label" parent="VBox/Body/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Morality" type="Label" parent="VBox/Body/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBox/Body/VBoxContainer"]
layout_mode = 2

[node name="Traits" type="RichTextLabel" parent="VBox/Body/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Abilities" type="RichTextLabel" parent="VBox/Body/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Goals" type="RichTextLabel" parent="VBox/Body"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = true
scroll_active = false
